--- a/style.css
+++ b/style.css
@@ -44,18 +44,25 @@ body{
     text-decoration: none;
 }
 
+.perfil_pequeno{
+    display: contents;
+}
+
 .perfil{
-    width: 20%;
+    width: 5%;
     border-radius: 10em;
+    padding: 1%;
 }
 
 .primeira{
     display: flex;
     width: 50%;
+    display: -webkit-inline-box;
 }
 
 .perfil2{
     border-radius: 50%;
+    padding: 15%;
 }
 
 .logo{
@@ -63,3 +70,20 @@ body{
     border-radius: 10em;
 }
 
+h1{
+    font-size: 40pt;
+    height: 5%;
+}
+
+h2{
+    font-size: 20pt;
+    font-weight: 100;
+}
+
+h3{
+    font-weight: 700;
+}
+
+p{
+    font-weight: 500;
+}
