--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body{
 
 #top{
     width: 100%;
-    height: 25rem;
+    height: 20rem;
     background-image: url(img/imagem_top.jpg);
-    background-position: center 10%;
+    background-position: center 30%;
     background-size: cover;    
 }
 
@@ -26,7 +26,7 @@ body{
 
 #menu div{
     color: white;
-    font-size: 20px;
+    font-size: 14px;
     align-self: center;
     padding: 1px;
 }
@@ -54,52 +54,59 @@ body{
     padding: 1%;
 }
 
-.primeira{
-    display: flex;
-    width: 50%;
-    display: -webkit-inline-box;
-}
-
-.perfil2{
-    border-radius: 50%;
-    padding: 10%;
-}
-
 .logo{
-    width: 10%;
+    width: 3%;
     border-radius: 10em;
 }
 
 h1{
-    font-size: 40pt;
+    font-size: 55px;
     height: 5%;
+    margin-block: 0px;
 }
 
 h2{
-    font-size: 20pt;
+    font-size: 34px;
     font-weight: 100;
 }
 
 h3{
+    font-size: 34px;
     font-weight: 700;
 }
 
 p{
+    font-size: 21px;
     font-weight: 500;
 }
 
-.coluna1{
+.primeira{
     position: relative;
+}
+
+.coluna2{
+    padding-left: 41%;
+    padding-right: 29%;
+    background-color: springgreen;
+}
+
+
+.perfil2 {
+    position: absolute;
+    left: 22%;
+    top: -14%;
+    border-radius: 11em;
+    width: 17%;
 }
 
 .perfil_1{
     position: absolute;
-    left: 39%;
-    top: 65%;
+    left: 26%;
+    top: 11%;
 }
 
-.perfil_2{
+.perfil_2 {
     position: absolute;
-    left: 53%;
-    top: 65%;
+    left: 32%;
+    top: 11%;
 }
