--- a/style.css
+++ b/style.css
@@ -123,7 +123,14 @@ h2{
 
 .formaçao{
     padding-left: 22%;
-    background-color: #3459ff;
+    background-color: rgb(76 148 255);
+    padding-bottom: 5%;
+}
+
+.experiencia{
+    padding-left: 22%;
+    background-color: #7af6d6;
+    padding-bottom: 5%;
 }
 
 .anos{
@@ -143,5 +150,6 @@ h2{
     font-weight: 700;
     text-transform: uppercase;
     margin-block: 0px;
-    padding-bottom: 6%;
+    margin-bottom: 2%;
 }
+
