--- a/style.css
+++ b/style.css
@@ -133,7 +133,35 @@ h2{
     padding-bottom: 5%;
 }
 
-.anos{
+.projetos{
+    padding-left: 22%;
+    background-color: rgb(76 148 255);
+    padding-bottom: 5%  
+}
+
+.boton{
+    text-decoration: none;
+    padding: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-family: helvetica;
+    font-weight: 300;
+    font-style: normal;
+    color: black;
+    background-color: #3bf0c2;
+    border-radius: 15px;
+    border: 3px double #006505;
+    margin-left: 4%;
+  }
+
+.boton:hover{
+    background-color: rgb(52, 52, 241);
+    color: blanchedalmond;
+    opacity: 0.6;
+    text-decoration: none;
+  }
+
+.anos, .univer{
     font-size: 13px; 
     font-weight: 700;
     margin-block: 0px;
@@ -146,10 +174,36 @@ h2{
 }
 
 .univer{
-    font-size: 13px; 
-    font-weight: 700;
     text-transform: uppercase;
-    margin-block: 0px;
     margin-bottom: 2%;
 }
 
+.nome_projeto{
+    margin-left: 4%;
+    font-size: 21px;
+    margin-block: 0px;
+}
+
+p{
+    font-size: 13px;
+    margin: 4% 4% 12%;
+
+}
+
+.projeto1{
+    top: 1773px;
+    left: 554px;
+    width: 260px;
+    height: 335px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 5px;
+    opacity: 1;
+}
+
+.portal{
+    width: 91%;
+    margin: 4%;
+    border: 1px solid #707070;
+    opacity: 1;
+}
