--- a/style.css
+++ b/style.css
@@ -139,6 +139,13 @@ h2{
     padding-bottom: 5%  
 }
 
+.contato{
+    padding-left: 22%;
+    background-color: #7af6d6;
+    padding-bottom: 5%;
+    display: flex;    
+}
+
 .boton{
     text-decoration: none;
     padding: 3px;
@@ -147,8 +154,8 @@ h2{
     font-family: helvetica;
     font-weight: 300;
     font-style: normal;
-    color: black;
-    background-color: #3bf0c2;
+    color: white;
+    background-color: black;
     border-radius: 15px;
     border: 3px double #006505;
     margin-left: 4%;
@@ -184,10 +191,9 @@ h2{
     margin-block: 0px;
 }
 
-p{
+.texto_projeto{
     font-size: 13px;
     margin: 4% 4% 12%;
-
 }
 
 .projeto1{
@@ -195,7 +201,7 @@ p{
     left: 554px;
     width: 260px;
     height: 335px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
+    background: #76efc7 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 5px;
     opacity: 1;
@@ -206,4 +212,36 @@ p{
     margin: 4%;
     border: 1px solid #707070;
     opacity: 1;
+}
+
+.contato_logos{
+    width: 38%;
+}
+
+.formulario{
+    margin: 9% 0%;
+}
+
+.label{
+    margin-bottom: 3%;
+}
+
+.text{
+    width: 398px;
+    height: 34px;
+}
+
+.textarea{
+    width: 398px;
+    height: 133px;
+}
+
+.logo_contato {
+    margin: 3%;
+    width: 13%;
+    border-radius: 2em;
+}
+
+.texto_contato{
+    font-size: 21px;
 }
