--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
     font-size: 14px;
     align-self: center;
     padding: 1px;
+    padding-left: 15%;
 }
 
 #menu a:hover{
@@ -99,18 +100,19 @@ h3{
     top: -14%;
     border-radius: 11em;
     width: 17%;
+    border: inset;
 }
 
 .perfil_1{
     position: absolute;
-    left: 26%;
-    top: 11%;
+    left: 27%;
+    top: 10%;
 }
 
 .perfil_2{
     position: absolute;
     left: 32%;
-    top: 11% ;
+    top: 10% ;
 }
 
 h2{
@@ -215,11 +217,11 @@ h2{
 }
 
 .contato_logos{
-    width: 38%;
+    width: 37%;
 }
 
 .formulario{
-    margin: 9% 0%;
+    margin-top: 9%;
     padding-left: 3%;
 }
 
@@ -245,6 +247,7 @@ h2{
 
 .texto_contato{
     font-size: 21px;
+    margin-top: 6%;
 }
 
 footer{
@@ -253,4 +256,16 @@ footer{
     color: white;
     margin-block: 0px;
     padding: 1%;
+}
+
+p{
+    margin-block: 0px;
+}
+
+.center{
+    text-align: center;
+}
+
+.logos_baixos{
+    margin-top: 18%;
 }
